Add cameras, GPS speed, settings, custom markers to DPS Radar map
